chore: add error handling and test corresponding to it

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
         {
             "files": [
               "./jestPractice/*",
-              "./jestPractice/arrayUtils/*"
+              "./jestPractice/arrayUtils/*",
+              ".//jestPractice/errorHandling/*"
             ],
             "env": {
               "jest": true
